--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,49 @@ body {
   background-color: rgb(236, 130, 130);
 }
 .btn-collection {
-  margin: 0 auto;
-  margin-top: 100px;
+  /* margin: 0 auto; */
+  /* margin-top: 100px; */
+}
+#main-div{
+  display: flex;
+}
+#side-div{
+  /* box-sizing: border-box; */
+  width:30%;
+  display: flex;
+  background-color: rgb(131, 58, 180);
+  /* height: 1000px; */
+  color: white;
+}
+
+#welcome-div{
+  justify-content: center;
+  flex-direction: column;
+  display: flex;
+  min-height: 500px;
+  width: 70%;
+  box-sizing: border-box;
+  background-color: tomato;
+  
+}
+
+#todo-div{
+  justify-content: center;
+  flex-direction: column;
+  display: flex;
+  min-height: 500px;
+  width: 70%;
+  box-sizing: border-box;
+  background-color: tomato;
+  
+}
+
+.todo-item{
+  
+  box-sizing: border-box;
+  padding: 10px;
+  width:95%;
+  margin: 10px 2.5% 10px 2.5%;
+  background-color: rgb(255, 254, 251);
+  color: black;
 }
