--- a/css/side-div.css
+++ b/css/side-div.css
@@ -1,10 +1,41 @@
 #side-div {
 	padding: 2px;
-
-	box-sizing: border-box;
+	height: 100%;
+	/* box-sizing: border-box; */
 	/* width: 25%; */
 	display: flex;
+	flex-direction: column;
 	background-color: rgb(131, 58, 180);
 	/* height: 1000px; */
 	color: white;
+}
+
+#side-control {
+	display: block;
+	height: 30px;
+	width: 100%;
+	box-sizing: border-box;
+}
+
+#side-content {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	overflow: auto;
+	/* justify-content: center; */
+}
+
+.list-item {
+	width: 100%;
+	height: 30px;
+	padding: 4px;
+	margin-bottom: 2px;
+	display: block;
+	box-sizing: border-box;
+	color: rgb(255, 250, 250);
+	background-color: teal;
+}
+
+.list-item:hover {
+	background-color: rgb(7, 58, 58);
 }
